--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,9 @@
         <button class="theme-btn" data-theme="bloodborne" title="Bloodborne"><span class="theme-icon">🩸</span></button>
         <button class="theme-btn" data-theme="ice" title="Ice"><span class="theme-icon">🧊</span></button>
         <button class="theme-btn" data-theme="abyss" title="Abyss"><span class="theme-icon">🌊</span></button>
+        <button class="theme-btn" data-theme="scripture" title="Scripture"><span class="theme-icon">✝️</span></button>
+        <button class="theme-btn" data-theme="chapel" title="Chapel"><span class="theme-icon">⛪</span></button>
+        <button class="theme-btn" data-theme="gospel" title="Gospel"><span class="theme-icon">🕊️</span></button>
         <button class="theme-btn" data-theme="custom" title="Custom"><span class="theme-icon">🎨</span></button>
       </div>
     </div>
