Add mix-and-match theme mashup system (Effect Overlay picker)
- New 'Effect Overlay' section in theme popup: pick visual effects independently of color palette
- 16 effect options: Auto, None, CRT, Matrix, Nord, Dark Souls, Bloodborne, Fallout, FFX, Ice, Cyberpunk, LOTR, Abyss, Scripture, Chapel, Gospel
- CRT effects include scanlines, flicker, phosphor bloom, and monospace font
- Effects use data-effects attribute, separate from data-theme
- Effect selection persists in localStorage (haven_effects)
- theme-init.js applies saved effect before paint to prevent flash
- Effect speed slider shows when either theme or overlay has animations
- [data-effects] base rule resets scanlines; specific effects can re-enable them

--- a/public/app.html
+++ b/public/app.html
@@ -107,6 +107,28 @@
               <button class="theme-btn" data-theme="custom" title="Custom"><span class="theme-icon" id="custom-theme-swatch">🎨</span></button>
               <button class="theme-btn" data-theme="rgb" title="RGB"><span class="theme-icon">🌈</span></button>
             </div>
+            <!-- Effect overlay picker (mashup) -->
+            <div class="effect-overlay-section">
+              <div class="theme-popup-title" style="margin-top: 2px;">Effect Overlay</div>
+              <div class="effect-selector" id="effect-selector">
+                <button class="effect-btn active" data-effect="auto" title="Match theme">⟳</button>
+                <button class="effect-btn" data-effect="none" title="No effects">🚫</button>
+                <button class="effect-btn" data-effect="crt" title="CRT Scanlines">📺</button>
+                <button class="effect-btn" data-effect="matrix" title="Matrix Rain">Ⅿ</button>
+                <button class="effect-btn" data-effect="nord" title="Snowfall">❄</button>
+                <button class="effect-btn" data-effect="darksouls" title="Campfire">🔥</button>
+                <button class="effect-btn" data-effect="bloodborne" title="Blood Vignette">🩸</button>
+                <button class="effect-btn" data-effect="fallout" title="Phosphor Glow">☢️</button>
+                <button class="effect-btn" data-effect="ffx" title="Water Flow">⚔️</button>
+                <button class="effect-btn" data-effect="ice" title="Frost Shimmer">🧊</button>
+                <button class="effect-btn" data-effect="cyberpunk" title="Glitch">⚡</button>
+                <button class="effect-btn" data-effect="lotr" title="Candlelight">⚜</button>
+                <button class="effect-btn" data-effect="abyss" title="Ocean Depth">🌊</button>
+                <button class="effect-btn" data-effect="scripture" title="Cross Light">✝️</button>
+                <button class="effect-btn" data-effect="chapel" title="Stained Glass">⛪</button>
+                <button class="effect-btn" data-effect="gospel" title="Divine Radiance">🕊️</button>
+              </div>
+            </div>
             <!-- Custom theme triangle picker -->
             <div id="custom-theme-editor" style="display:none">
               <canvas id="custom-hue-bar" width="206" height="18"></canvas>
