fix: Win95 authentic scrollbars/bevels, leave button separation, double divider
- Win95 scrollbars: 16px wide with arrow buttons, checkerboard track, 3px outset thumb
- Win95 bevels: all outset/inset borders bumped from 2px to 3px for authentic depth
- Win95 gray: #c0c0c0 -> #bfbfbf (slightly darker, period-accurate)
- Firefox: scrollbar-width override from thin to auto for Win95 theme
- Leave button: added vertical divider separator, reduced size (28px) to prevent accidental clicks
- Double divider: removed redundant border-top from .dm-section-label (handle provides the line)

--- a/public/app.html
+++ b/public/app.html
@@ -383,6 +383,7 @@
           <button id="screen-share-btn" class="voice-panel-btn" title="Share Screen">🖥️</button>
           <button id="music-share-btn" class="voice-panel-btn" title="Listen Together">🎵</button>
           <button id="voice-settings-toggle" class="voice-panel-btn" title="Voice Settings">⚙️</button>
+          <span class="voice-panel-divider"></span>
           <button id="voice-leave-sidebar-btn" class="voice-panel-btn voice-panel-leave" title="Leave Voice">✕</button>
         </div>
         <!-- Settings button pinned at bottom -->
