fix: protect critical uploads from auto-cleanup (#32) + emoji autocomplete (#33)
- Auto-cleanup now skips server icon, user avatars, custom emojis, custom sounds, and webhook avatars
- Added :emoji autocomplete dropdown (2+ chars trigger, custom emojis first, then standard)

--- a/public/app.html
+++ b/public/app.html
@@ -345,6 +345,7 @@
               <div class="gif-picker-footer">Powered by GIPHY</div>
             </div>
             <div id="mention-dropdown" class="mention-dropdown" style="display:none"></div>
+            <div id="emoji-dropdown" class="emoji-dropdown" style="display:none"></div>
             <div id="slash-dropdown" class="slash-dropdown" style="display:none"></div>
             <textarea id="message-input" placeholder="Type a message... (/ for commands)"
                       rows="1" maxlength="2000"></textarea>
